Further BitLocker improvements
1. Improved localization
2. Added reminder to back up volume details

--- a/Harden System Security/CustomUIElements/AddKeyProtectorDialog.xaml
+++ b/Harden System Security/CustomUIElements/AddKeyProtectorDialog.xaml
@@ -80,13 +80,13 @@
                                    Style="{StaticResource BodyStrongTextBlockStyle}"/>
 
                         <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                                    Padding="12"
-                                    CornerRadius="6">
+                                Padding="12"
+                                CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Enter a PIN"/>
-                                <TextBox Text="{x:Bind PIN, Mode=TwoWay}"
-                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"
-                                             PlaceholderText="Required length is determined by the policies."/>
+                                <TextBlock x:Uid="EnterAPinText"/>
+                                <PasswordBox Password="{x:Bind PIN, Mode=TwoWay}"
+                                             PasswordChar="#"
+                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"/>
                             </StackPanel>
                         </Border>
 
@@ -109,13 +109,13 @@
                                     Padding="12"
                                     CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Select a Removable Drive"/>
+                                <TextBlock x:Uid="SelectARemovableDriveText"/>
 
                                 <controls:WrapPanel Orientation="Horizontal"
                                                     HorizontalSpacing="10"
                                                     VerticalSpacing="10">
 
-                                    <Button Content="Refresh"
+                                    <Button x:Uid="RefreshButton"
                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"
                                             Click="{x:Bind RefreshRemovableDrives}">
                                         <Button.ContentTemplate>
@@ -159,10 +159,10 @@
                                 Padding="12"
                                 CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Enter a PIN"/>
-                                <TextBox Text="{x:Bind PIN, Mode=TwoWay}"
-                                         IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"
-                                         PlaceholderText="Required length is determined by the policies."/>
+                                <TextBlock x:Uid="EnterAPinText"/>
+                                <PasswordBox Password="{x:Bind PIN, Mode=TwoWay}"
+                                             PasswordChar="#"
+                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"/>
                             </StackPanel>
                         </Border>
 
@@ -170,13 +170,13 @@
                                 Padding="12"
                                 CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Select a Removable Drive"/>
+                                <TextBlock x:Uid="SelectARemovableDriveText"/>
 
                                 <controls:WrapPanel Orientation="Horizontal"
                                                     HorizontalSpacing="10"
                                                     VerticalSpacing="10">
 
-                                    <Button Content="Refresh"
+                                    <Button x:Uid="RefreshButton"
                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"
                                             Click="{x:Bind RefreshRemovableDrives}">
                                         <Button.ContentTemplate>
@@ -221,13 +221,13 @@
                                 Padding="12"
                                 CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Select a Removable Drive"/>
+                                <TextBlock x:Uid="SelectARemovableDriveText"/>
 
                                 <controls:WrapPanel Orientation="Horizontal"
                                                     HorizontalSpacing="10"
                                                     VerticalSpacing="10">
 
-                                    <Button Content="Refresh"
+                                    <Button x:Uid="RefreshButton"
                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"
                                             Click="{x:Bind RefreshRemovableDrives}">
                                         <Button.ContentTemplate>
@@ -292,9 +292,10 @@
                                 Padding="12"
                                 CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Enter a Password"/>
-                                <TextBox Text="{x:Bind Password, Mode=TwoWay}"
-                                         IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"/>
+                                <TextBlock x:Uid="EnterAPasswordText"/>
+                                <PasswordBox Password="{x:Bind Password, Mode=TwoWay}"
+                                             PasswordChar="#"
+                                             IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"/>
                             </StackPanel>
                         </Border>
 
@@ -316,7 +317,7 @@
                                 Padding="12"
                                 CornerRadius="6">
                             <StackPanel Spacing="6">
-                                <TextBlock Text="Enter a Recovery Password"/>
+                                <TextBlock x:Uid="EnterARecoveryPassword"/>
                                 <TextBox Text="{x:Bind RecoveryPassword, Mode=TwoWay}"
                                          IsEnabled="{x:Bind ElementsAreEnabled, Mode=OneWay}"/>
                             </StackPanel>
