--- a/AppControl Manager/Pages/Settings.xaml
+++ b/AppControl Manager/Pages/Settings.xaml
@@ -11,6 +11,7 @@
     xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:customUI="using:AppControlManager.CustomUIElements"
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
+    xmlns:win2d="using:Microsoft.Graphics.Canvas.Text"
     FlowDirection="{x:Bind ViewModel.AppSettings.ApplicationGlobalFlowDirection, Mode=OneWay}"
     mc:Ignorable="d">
 
@@ -199,6 +200,17 @@
                                 <Button Click="{x:Bind ViewModel.BrowseForCISchemaPath}" x:Uid="BrowseForCISchemaButton" />
 
                             </controls:WrapPanel>
+                        </customUI:SettingsCardV2>
+
+                        <customUI:SettingsCardV2 x:Uid="AutoResizeListViewColumnsSettingsCard" HeaderIcon="{ui:FontIcon Glyph=&#xE73F;}">
+                            <ToggleSwitch IsOn="{x:Bind ViewModel.AppSettings.AutoResizeListViewColumns, Mode=TwoWay}"
+                                          x:Uid="ToggleSwitchGeneral"/>
+                        </customUI:SettingsCardV2>
+
+                        <!-- https://microsoft.github.io/Win2D/WinUI2/html/M_Microsoft_Graphics_Canvas_Text_CanvasTextFormat_GetSystemFontFamilies.htm -->
+                        <customUI:SettingsCardV2 x:Uid="ListViewFontFamilySettingsCard" HeaderIcon="{ui:FontIcon Glyph=&#xE8D2;}">
+                            <ComboBox ItemsSource="{x:Bind win2d:CanvasTextFormat.GetSystemFontFamilies()}"
+                                      SelectedItem="{x:Bind ViewModel.AppSettings.ListViewFontFamily, Mode=TwoWay}" />
                         </customUI:SettingsCardV2>
 
                     </controls:SettingsExpander.Items>
