Fixed a localization resource issue and update dependencies
Fixed a localization resource issue for the Harden System Security app and also updated the MSAL library versions for Harden System Security and AppControl Manager.

--- a/Harden System Security/CustomUIElements/MUnitListViewControl.xaml
+++ b/Harden System Security/CustomUIElements/MUnitListViewControl.xaml
@@ -553,7 +553,7 @@
                                FontWeight="SemiBold"
                                Foreground="WhiteSmoke"
                                VerticalAlignment="Center">
-                        <Run x:Uid="SelectedText" />
+                        <Run x:Uid="SelectedItemText" />
                         <Run Text="{x:Bind SelectedItemsCount, Mode=OneWay}"/>
                     </TextBlock>
                 </Border>
